--- a/app/views/quests/_comments_header.html.erb
+++ b/app/views/quests/_comments_header.html.erb
@@ -1,15 +1,15 @@
 <nav class="navbar border border-light d-flex justify-content-center shadow-sm rounded-top py-0">
   <div class="opinion_container">
     <div class="opinion_select_bar"></div>
-    <button class="opinion_tab active_button">
+    <button class="opinion_tab active_button", id="positive_button">
       <div>良かった点</div>
       <div class="opinion_icon icon-blue", id="positive_icon"><%= positive_comments_num %></div>
     </button>
-    <button class="opinion_tab inactive_button">
+    <button class="opinion_tab inactive_button", id="negative_button">
       <div>改善点</div>
       <div class="opinion_icon icon-red", id="negative_icon"><%= negative_comments_num %></div>
     </button>
-    <button class="opinion_tab inactive_button">
+    <button class="opinion_tab inactive_button", id="question_button">
       <div>質問・その他</div>
       <div class="opinion_icon icon-yellow", id="question_icon"><%= question_comments_num %></div>
     </button>
