Viewのリファクタ

--- a/app/views/quests/_detail.html.erb
+++ b/app/views/quests/_detail.html.erb
@@ -1,4 +1,4 @@
-<div class="container py-5">
+<div class="container p-4">
   <p>
     <%= "Quest#{quest.develop_id} : #{quest.title}" %>
     <span class="px-2"><%= link_to icon('fas', 'edit'), edit_quest_path(quest.id) %></span>
