--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -1,4 +1,4 @@
-<div class="page_head p-4">
+<div class="page_head">
   <%= render 'shared/flash_messages', flash: flash %>
   <% @quests.each do |quest| %>
     <div>
