--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="page_head p-4">
+<div class="page_head">
   <p>プロフィール</p>
   <div class="d-flex mb-4 profile">
     <img src="<%= @user.image_url %>" class="rounded-circle mx-2", width="64", height="64">
